# mcp-security-merge

./: .gitignore  README.md  cline_mcp_settings.json.example  cloudrun_deploy_run.sh
.github/workflows/: deploy-docs.yml  publish-packages.yml
docs/: Makefile  conf.py  development_guide.md  index.md  requirements.txt  toc.md  usage_guide.md
docs/_templates/sidebar/: custom_github_link.html
docs/servers/: gti_mcp.md  scc_mcp.md  secops_mcp.md  secops_soar_mcp.md
docs/soar_integrations/: active_directory.md  alexa.md  algo_sec.md  alien_vault_anywhere.md  alien_vault_appliance.md  alien_vault_ti.md  amazon_macie.md  anomali.md  anomali_staxx.md  anomali_threat_stream.md  any_run.md  api_void.md  app_sheet.md  arc_sight_logger.md  arcsight.md  area1.md  armis.md  atlassian_confluence_server.md  attivo.md  auto_focus.md  automox.md  aws_cloud_trail.md  aws_cloud_watch.md  aws_guard_duty.md  aws_security_hub.md  awsec2.md  awsiam.md  awsiam_access_analyzer.md  awss3.md  awswaf.md  axonius.md  azure_active_directory.md  azure_ad_identity_protection.md  azure_security_center.md  bit_sight.md  blue_liv.md  bmc_helix_remedy_force.md  bmc_remedy_itsm.md  bulk_who_is.md  ca_service_desk.md  (+322 more)
run-with-google-adk/: .dockerignore  Dockerfile  README.md  ae_deploy_run.sh  ae_remote_deployment_sec.py  agent_data.db  cloudrun_deploy.py  cloudrun_deploy_run.sh  console-mcp-agent.py  delete_agent_ge.sh  main.py  main_ae.py  register_aea_to_ge.sh  requirements.txt  run-adk-agent.sh  test.py  test.sh  view_agents_ge.sh
run-with-google-adk/google-mcp-security-agent/: agent.py  sample.env
run-with-google-adk/google_mcp_security_agent/: __init__.py  agent.py  crowdstrike_agent.py  sample.env  sample.env.properties
run-with-google-adk/google_mcp_security_agent/subagents/: __init__.py
run-with-google-adk/google_mcp_security_agent/subagents/falcon/: falcon_agent.py
run-with-google-adk/sample_servers_to_integrate/agents/: demo_idp_agent.py  demo_xdr_agent.py
run-with-google-adk/sample_servers_to_integrate/mcp_servers/demo_idp/: idp_mcp_server.py
run-with-google-adk/sample_servers_to_integrate/mcp_servers/demo_xdr/: xdr_mcp_server.py
run-with-google-adk/static/: README.md  app.js  index.html  index_script.js  landing.html  landing_script.js
run-with-google-adk/utils_extensions_cbs_tools/: __init__.py  cache.py  callbacks.py  extensions.py  tools.py  utils.py
server/crowdstrike/: server.py
server/demo_idp/: idp_mcp_server.py
server/demo_xdr/: xdr_mcp_server.py
server/falcon_mcp/: __init__.py  client.py  registry.py  server.py
server/falcon_mcp/common/: __init__.py  api_scopes.py  errors.py  logging.py  utils.py
server/falcon_mcp/modules/: __init__.py  base.py  cloud.py  detections.py  discover.py  hosts.py  idp.py  incidents.py  intel.py  sensor_usage.py  serverless.py  spotlight.py
server/falcon_mcp/resources/: cloud.py  detections.py  discover.py  hosts.py  incidents.py  intel.py  sensor_usage.py  serverless.py  spotlight.py
server/gti/: README.md  pyproject.toml  setup.py
server/gti/gti_mcp/: server.py  utils.py
server/gti/gti_mcp/tools/: __init__.py  collections.py  files.py  intelligence.py  netloc.py  threat_profiles.py  urls.py
server/gti/tests/: conftest.py  test_tools.py
server/scc/: README.md  pyproject.toml  scc_mcp.py  setup.py
server/secops/: README.md  example.py  pyproject.toml  setup.py
server/secops-soar/: README.md  pyproject.toml  setup.py
server/secops-soar/logger_utils/: __init__.py  utils.py
server/secops-soar/secops_soar_mcp/: bindings.py  case_management.py  http_client.py  server.py
server/secops-soar/secops_soar_mcp/marketplace/: activedirectory.py  alexa.py  algosec.py  alienvaultti.py  alienvaultusmanywhere.py  alienvaultusmappliance.py  amazonmacie.py  anomali.py  anomalistaxx.py  anomalithreatstream.py  any.run.py  apivoid.py  appsheet.py  arcsight.py  arcsightlogger.py  area1.py  armis.py  atlassianconfluenceserver.py  attivo.py  automox.py  awscloudtrail.py  awscloudwatch.py  awselasticcomputecloud(ec2).py  awsguardduty.py  awsiamaccessanalyzer.py  awsidentityandaccessmanagement(iam).py  awss3.py  awssecurityhub.py  awswaf.py  axonius.py  azureactivedirectory.py  azureadidentityprotection.py  azuresecuritycenter.py  bitsight.py  blueliv.py  bmchelixremedyforce.py  bmcremedyitsm.py  bulkwhois.py  carbonblackdefense.py  carbonblackprotection.py  (+254 more)
server/secops-soar/secops_soar_mcp/utils/: consts.py  models.py  pydantic_list_field.py  utils.py
server/secops-soar/tests/: config.json.example  conftest.py  tests.py
server/secops/secops_mcp/: __init__.py  server.py
server/secops/secops_mcp/tools/: __init__.py  data_table_management.py  entity_lookup.py  feed_management.py  ioc_matches.py  log_ingestion.py  parser_management.py  reference_list_management.py  security_alerts.py  security_events.py  security_rules.py  threat_intel.py
server/secops/tests/: README.md  __init__.py  config.json.example  conftest.py  test_secops_mcp.py
