[project]
name = "SoarAS"
version = "0.1.0"
description = "Google SecOps SOAR MCP server"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiohttp>=3.11.15",
    "mcp[cli]>=1.4.1"
]

[project.optional-dependencies]
test = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0"
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"