[project]
name = "secops-mcp"
version = "0.1.0"
description = "Google SecOps MCP server"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.28.1",
    "mcp[cli]>=1.4.1",
    "secops>=0.1.17",
    "google-auth>=2.38.0",
    "google-auth-httplib2>=0.2.0",
    "google-api-python-client>=2.164.0"
]

[project.optional-dependencies]
test = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0"
]

[project.scripts]
secops_mcp = "secops_mcp.server:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
