[project]
name = "google-secops-mcp"
version = "0.4.1"
description = "Google SecOps MCP server"
readme = "README.md"
requires-python = ">=3.11"
authors = [
    { name = "Google SecOps Team", email = "chronicle@google.com" }
]
keywords = ["google", "security", "chronicle", "secops", "mcp"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Topic :: Security",
]
dependencies = [
    "httpx>=0.28.1",
    "mcp[cli]>=1.4.1",
    "secops>=0.18.0",
    "google-auth>=2.38.0",
    "google-auth-httplib2>=0.2.0",
    "google-api-python-client>=2.164.0"
]

[project.urls]
Homepage = "https://github.com/google/mcp-security"
Documentation = "https://github.com/google/mcp-security/tree/main/server/secops#readme"
Repository = "https://github.com/google/mcp-security/tree/main/server/secops"
Issues = "https://github.com/google/mcp-security/issues"

[project.optional-dependencies]
test = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0"
]

[project.scripts]
secops_mcp = "secops_mcp.server:main"

[project.entry-points.mcp]
secops_mcp = "secops_mcp.server:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["secops_mcp*"]
